fixed spacing in css

--- a/css/style.css
+++ b/css/style.css
@@ -191,14 +191,14 @@ hr.short {
 
 #sec2 {
 	width: 100%;
-	height: 150%;
+	height: 200%;
 	background: linear-gradient(rgba(0,2,10,0.95), rgba(3,31,51,1));
 	position: relative;
 }
 
 	#sec2-text-wrapper {
 		width: 50%;
-		height: auto;
+		height: 70%;
 		position: absolute;
 		top: 5%;
 		left: 25%;
